--- a/index.html
+++ b/index.html
@@ -1,64 +1,132 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" href="index.css">
-  
-  <title>Frontend Mentor | News homepage</title>
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+    <link rel="stylesheet" href="index.css">
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+    <title>Frontend Mentor | News homepage</title>
+
+    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+    <style>
+        .attribution {
+            font-size: 11px;
+            text-align: center;
+        }
+
+        .attribution a {
+            color: hsl(228, 45%, 44%);
+        }
+    </style>
 </head>
+
 <body>
 
-  Home
-  New
-  Popular
-  Trending
-  Categories
+    <header>
 
-  The Bright Future of Web 3.0?
+        <div>
+            <img src="./assets/images/logo.svg" alt="">
+        </div>
+        <nav>
+            <ul>
+                <li>Home</li>
+                <li>New</li>
+                <li>Popular</li>
+                <li>Trending</li>
+                <li>Categories</li>
+            </ul>
+        </nav>
+    </header>
 
-  We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of the people. 
-  But is it really fulfilling its promise?
+    <section>
 
-  Read more
+        <div>
 
-  New 
+            <picture>
+                <source media="(min-width: 768px)" srcset="./assets/images/image-web-3-desktop.jpg" sizes="">
+                <img src="./assets/images/image-web-3-mobile.jpg" alt="">
+            </picture>
 
-  Hydrogen VS Electric Cars
-  Will hydrogen-fueled cars ever catch up to EVs?
+            <article>
+                <h1>The Bright Future of Web 3.0?</h1>
 
-  The Downsides of AI Artistry
-  What are the possible adverse effects of on-demand AI image generation?
+                <div>
+                    <p>
+                        We dive into the next evolution of the web that claims to put the power of the platforms back
+                        into
+                        the
+                        hands of the
+                        people.
+                        But is it really fulfilling its promise?
+                    </p>
+                    <button>Read more</button>
+                </div>
+            </article>
+        </div>
 
-  Is VC Funding Drying Up?
-  Private funding by VC firms is down 50% YOY. We take a look at what that means.
+        <div>
+            <h2>New</h2>
 
-  01
-  Reviving Retro PCs
-  What happens when old PCs are given modern upgrades?
+            <article>
+                <h3>Hydrogen VS Electric Cars</h3>
+                <p>
+                    Will hydrogen-fueled cars ever catch up to EVs?
+                </p>
+            </article>
+            <article>
+                <h3>The Downsides of AI Artistry</h3>
+                <p>
+                    What are the possible adverse effects of on-demand AI image generation?
+                </p>
+            </article>
+            <article>
+                <h3>Is VC Funding Drying Up?</h3>
+                <p>
+                    Private funding by VC firms is down 50% YOY. We take a look at what that means.
 
-  02
-  Top 10 Laptops of 2022
-  Our best picks for various needs and budgets.
+                </p>
+            </article>
+        </div>
+    </section>
 
-  03
-  The Growth of Gaming
-  How the pandemic has sparked fresh opportunities.
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="https://github.com/duclairdeugoue">duclairdeugoue</a>.
-  </div>
+    <div>
+        <article>
+            <div>
+                <img src="./assets/images/image-retro-pcs.jpg" alt="">
+                <span>01</span>
+                <h4>Reviving Retro PCs</h4>
+                <p>What happens when old PCs are given modern upgrades?</p>
+            </div>
+        </article>
+        <article>
+            <div>
+                <img src="./assets/images/image-top-laptops.jpg" alt="">
+                <span>02</span>
+                <h4>Top 10 Laptops of 2022</h4>
+                <p>Our best picks for various needs and budgets.</p>
+            </div>
+        </article>
+        <article>
+            <div>
+                <img src="./assets/images/image-gaming-growth.jpg" alt="">
+                <span>03</span>
+                <h4>The Growth of Gaming</h4>
+                <p>How the pandemic has sparked fresh opportunities.</p>
+            </div>
+        </article>
+    </div>
+
+    <div class="attribution">
+        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+        Coded by <a href="https://github.com/duclairdeugoue">duclairdeugoue</a>.
+    </div>
 
 
-  <script src="index.js"></script>
+    <script src="index.js"></script>
 </body>
+
 </html>
