--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 <body>
 
-    <header>
+    <header class="header">
 
         <div>
             <img src="./assets/images/logo.svg" alt="">
@@ -42,10 +42,8 @@
         </nav>
     </header>
 
-    <section>
-
+    <section class="showcase">
         <div>
-
             <picture>
                 <source media="(min-width: 768px)" srcset="./assets/images/image-web-3-desktop.jpg" sizes="">
                 <img src="./assets/images/image-web-3-mobile.jpg" alt="">
@@ -57,11 +55,7 @@
                 <div>
                     <p>
                         We dive into the next evolution of the web that claims to put the power of the platforms back
-                        into
-                        the
-                        hands of the
-                        people.
-                        But is it really fulfilling its promise?
+                        into the hands of the people. But is it really fulfilling its promise?
                     </p>
                     <button>Read more</button>
                 </div>
@@ -87,32 +81,31 @@
                 <h3>Is VC Funding Drying Up?</h3>
                 <p>
                     Private funding by VC firms is down 50% YOY. We take a look at what that means.
-
                 </p>
             </article>
         </div>
     </section>
 
-    <div>
+    <div class="cards">
         <article>
+            <img src="./assets/images/image-retro-pcs.jpg" alt="">
             <div>
-                <img src="./assets/images/image-retro-pcs.jpg" alt="">
                 <span>01</span>
                 <h4>Reviving Retro PCs</h4>
                 <p>What happens when old PCs are given modern upgrades?</p>
             </div>
         </article>
         <article>
+            <img src="./assets/images/image-top-laptops.jpg" alt="">
             <div>
-                <img src="./assets/images/image-top-laptops.jpg" alt="">
                 <span>02</span>
                 <h4>Top 10 Laptops of 2022</h4>
                 <p>Our best picks for various needs and budgets.</p>
             </div>
         </article>
         <article>
+            <img src="./assets/images/image-gaming-growth.jpg" alt="">
             <div>
-                <img src="./assets/images/image-gaming-growth.jpg" alt="">
                 <span>03</span>
                 <h4>The Growth of Gaming</h4>
                 <p>How the pandemic has sparked fresh opportunities.</p>
