--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
     <style>
         .attribution {
-            font-size: 11px;
+            font-size: 14px;
             text-align: center;
         }
 
@@ -40,6 +40,12 @@
                 <li>Categories</li>
             </ul>
         </nav>
+
+        <div>
+            <button id="menu-btn">
+                <img src="./assets/images/icon-menu.svg" alt="">
+            </button>
+        </div>
     </header>
 
     <section class="showcase">
