[Update]: navbar toggle implemented

--- a/index.html
+++ b/index.html
@@ -31,7 +31,10 @@
         <div>
             <img src="./assets/images/logo.svg" alt="">
         </div>
-        <nav>
+        <nav class="open">
+            <button id="menu-btn-close">
+                <img src="./assets/images/icon-menu-close.svg" alt="">
+            </button>
             <ul>
                 <li>Home</li>
                 <li>New</li>
@@ -42,7 +45,7 @@
         </nav>
 
         <div>
-            <button id="menu-btn">
+            <button id="menu-btn-open">
                 <img src="./assets/images/icon-menu.svg" alt="">
             </button>
         </div>
