[Update]: added transition in sidebar toggle

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div>
             <img src="./assets/images/logo.svg" alt="">
         </div>
-        <nav class="open">
+        <nav class="navbar">
             <button id="menu-btn-close">
                 <img src="./assets/images/icon-menu-close.svg" alt="">
             </button>
